Revert "Revert "get rid of apache maven plugin for java 11""
This reverts commit ce1bafcccbe9205bef466047a5637d5aa13d5698.